syntax = "proto3";

package com.grpc.ex;

option java_multiple_files = true;
option java_package = "com.grpc.ex";

service IdGeneratorService {
  rpc generate(IDGeneratorRequest) returns (IDGeneratorResponse) {
  }
}

message IDGeneratorRequest {
  string message = 1;
}

message IDGeneratorResponse {
  string message = 1;
}